--- a/zed_wrapper/params/common1.yaml
+++ b/zed_wrapper/params/common1.yaml
@@ -17,15 +17,15 @@ general:
     resolution:                 2                                   # '0': HD2K, '1': HD1080, '2': HD720, '3': VGA
     frame_rate:                 60
     gpu_id:                     -1
-    base_frame:                 'fcu'                 # must be equal to the frame_id used in the URDF file
-    camera_frame:               'zed_camera_center1'                 # must be equal to the frame_id used in the URDF file
+    base_frame:                 'base_link'                 # must be equal to the frame_id used in the URDF file
+    camera_frame:               'zed_camera_center'                 # must be equal to the frame_id used in the URDF file
     left_camera_frame:          'zed_left_camera_frame'             # must be equal to the frame_id used in the URDF file
     left_camera_optical_frame:  'zed_left_camera_optical_frame'     # must be equal to the frame_id used in the URDF file
     right_camera_frame:         'zed_right_camera_frame'            # must be equal to the frame_id used in the URDF file
     right_camera_optical_frame: 'zed_right_camera_optical_frame'    # must be equal to the frame_id used in the URDF file
     verbose:                    true
     svo_compression:            4                                   # `0`: RAW (no compression), `1`: LOSSLESS (PNG/ZSTD), `2`: LOSSY (JPEG), `3`: AVCHD (H264 SDK v2.7), `4`: HEVC (H265 SDK v2.7)
-
+ 
 video:
     rgb_topic_root:             'rgb'                               # default `rgb/image_rect_color`, `rgb/camera_info`, `rgb_raw/image_raw_color`, `rgb_raw/camera_info`
     left_topic_root:            'left'                              # default `left/image_rect_color`, `left/camera_info`, `left_raw/image_raw_color`, `left_raw/camera_info`
@@ -45,7 +45,7 @@ depth:
 
 tracking:
     publish_tf:                 true                               # publish `odom -> base_link` TF
-    publish_map_tf:             true                              # publish `map -> odom` TF
+    publish_map_tf:             true                               # publish `map -> odom` TF
     world_frame:                'zed_map'                           # the reference fixed frame (same as `map_frame` or `odometry_frame`)
     map_frame:                  'map'
     odometry_frame:             'local_origin'
