--- a/zed_wrapper/params/common.yaml
+++ b/zed_wrapper/params/common.yaml
@@ -17,7 +17,7 @@ general:
     resolution:                 2                                   # '0': HD2K, '1': HD1080, '2': HD720, '3': VGA
     frame_rate:                 60
     gpu_id:                     -1
-    base_frame:                 'zed_camera_center'                 # must be equal to the frame_id used in the URDF file
+    base_frame:                 'base_link'                 # must be equal to the frame_id used in the URDF file
     camera_frame:               'zed_camera_center'                 # must be equal to the frame_id used in the URDF file
     left_camera_frame:          'zed_left_camera_frame'             # must be equal to the frame_id used in the URDF file
     left_camera_optical_frame:  'zed_left_camera_optical_frame'     # must be equal to the frame_id used in the URDF file
@@ -46,7 +46,7 @@ depth:
 tracking:
     publish_tf:                 false                               # publish `odom -> base_link` TF
     publish_map_tf:             false                               # publish `map -> odom` TF
-    world_frame:                'zed_map'                           # the reference fixed frame (same as `map_frame` or `odometry_frame`)
+    world_frame:                'world'                             # the reference fixed frame (same as `map_frame` or `odometry_frame`)
     map_frame:                  'map'
     odometry_frame:             'local_origin'
     odometry_db:                ''
