--- a/zed_wrapper/params/common.yaml
+++ b/zed_wrapper/params/common.yaml
@@ -50,7 +50,7 @@ tracking:
     map_frame:                  'zed_map'
     odometry_frame:             'local_origin'
     odometry_db:                ''
-    spatial_memory:             true                                # Enable to detect loop closure
+    spatial_memory:             false                                # Enable to detect loop closure
     floor_alignment:            false                               # Enable to automatically calculate camera/floor offset
     initial_base_pose:          [0.0,0.0,0.0, 0.0,0.0,0.0]          # [X, Y, Z, R, P, Y]
     pose_topic:                 'pose'
