--- a/zed_wrapper/params/common_cam_2.yaml
+++ b/zed_wrapper/params/common_cam_2.yaml
@@ -25,6 +25,7 @@ general:
     right_camera_optical_frame: 'zed_right_camera_optical_frame_2'    # must be equal to the frame_id used in the URDF file
     verbose:                    true
     svo_compression:            4                                   # `0`: RAW (no compression), `1`: LOSSLESS (PNG/ZSTD), `2`: LOSSY (JPEG), `3`: AVCHD (H264 SDK v2.7), `4`: HEVC (H265 SDK v2.7)
+    coordinate_system:          0                                   # 0 : right_handed_z_up_x_fwd, 1 : left_handed_z_up, 2 : right_handed_z_up, 3 : right_handed_y_up, 4 : left_handed_y_up, 5 : image
 
 video:
     rgb_topic_root:             'rgb'                               # default `rgb/image_rect_color`, `rgb/camera_info`, `rgb_raw/image_raw_color`, `rgb_raw/camera_info`
