--- a/zed_wrapper/params/common_cam_2.yaml
+++ b/zed_wrapper/params/common_cam_2.yaml
@@ -13,7 +13,7 @@ point_cloud_freq:           10.0                                # Dynamic - freq
 general:
     camera_flip:                false
     zed_id:                     -1
-    serial_number:              10027735 
+    serial_number:              10027493 
     resolution:                 3                                   # '0': HD2K, '1': HD1080, '2': HD720, '3': VGA
     frame_rate:                 60
     gpu_id:                     -1
@@ -26,6 +26,7 @@ general:
     verbose:                    true
     svo_compression:            4                                   # `0`: RAW (no compression), `1`: LOSSLESS (PNG/ZSTD), `2`: LOSSY (JPEG), `3`: AVCHD (H264 SDK v2.7), `4`: HEVC (H265 SDK v2.7)
     coordinate_system:          0                                   # 0 : right_handed_z_up_x_fwd, 1 : left_handed_z_up, 2 : right_handed_z_up, 3 : right_handed_y_up, 4 : left_handed_y_up, 5 : image
+    pixel_sub_prefix:           'zed2'
 
 video:
     rgb_topic_root:             'rgb'                               # default `rgb/image_rect_color`, `rgb/camera_info`, `rgb_raw/image_raw_color`, `rgb_raw/camera_info`
