--- a/zed_wrapper/params/common_cam_1.yaml
+++ b/zed_wrapper/params/common_cam_1.yaml
@@ -14,7 +14,7 @@ general:
     camera_flip:                false
     zed_id:                     -1
     serial_number:              10027150
-    resolution:                 3                                   # '0': HD2K, '1': HD1080, '2': HD720, '3': VGA
+    resolution:                 2                                   # '0': HD2K, '1': HD1080, '2': HD720, '3': VGA
     frame_rate:                 60
     gpu_id:                     -1
     base_frame:                 'base_link_1'                 # must be equal to the frame_id used in the URDF file
@@ -59,7 +59,7 @@ tracking:
     fixed_covariance:           false                               # Set the covariance for pose and odometry to a diagonal matrix with `fixed_cov_value` on the diagonal
     fixed_cov_value:            1e-6                                # Value used on the diagonal of the fixed covariance matrix (`fixed_covariance -> true`)
     odometry_topic:             'odom'
-    init_odom_with_first_valid_pose: true                           # Enable to initialize the odometry with the first valid pose
+    init_odom_with_first_valid_pose: false                           # Enable to initialize the odometry with the first valid pose
     path_pub_rate:              2.0                                 # Path positions punlishing frequency
     path_max_count:             -1                                  # use '-1' for unlimited path size
     two_d_mode:                 false                               # Force navigation on a plane. If true the Z value will be fixed to "fixed_z_value", roll and pitch to zero
