--- a/zed_wrapper/params/common_cam_1.yaml
+++ b/zed_wrapper/params/common_cam_1.yaml
@@ -26,6 +26,7 @@ general:
     verbose:                    true
     svo_compression:            4                                   # `0`: RAW (no compression), `1`: LOSSLESS (PNG/ZSTD), `2`: LOSSY (JPEG), `3`: AVCHD (H264 SDK v2.7), `4`: HEVC (H265 SDK v2.7)
     coordinate_system:          2                                   # 0 : right_handed_z_up_x_fwd, 1 : left_handed_z_up, 2 : right_handed_z_up, 3 : right_handed_y_up, 4 : left_handed_y_up, 5 : image
+    camera_disable_imu:         true
 
 video:
     rgb_topic_root:             'rgb'                               # default `rgb/image_rect_color`, `rgb/camera_info`, `rgb_raw/image_raw_color`, `rgb_raw/camera_info`
@@ -60,6 +61,7 @@ tracking:
     fixed_cov_value:            1e-6                                # Value used on the diagonal of the fixed covariance matrix (`fixed_covariance -> true`)
     odometry_topic:             'odom'
     init_odom_with_first_valid_pose: true                           # Enable to initialize the odometry with the first valid pose
+    enable_imu_fusion:          false
     path_pub_rate:              2.0                                 # Path positions punlishing frequency
     path_max_count:             -1                                  # use '-1' for unlimited path size
     two_d_mode:                 false                               # Force navigation on a plane. If true the Z value will be fixed to "fixed_z_value", roll and pitch to zero
