--- a/zed_wrapper/package.xml
+++ b/zed_wrapper/package.xml
@@ -26,6 +26,7 @@
   <depend>dynamic_reconfigure</depend>
   <depend>nodelet</depend>
   <depend>diagnostic_updater</depend>
+  <depend>aisle_keeper</depend>
   
   <build_depend>urdf</build_depend>
   <build_depend>message_generation</build_depend>
