--- a/zed_wrapper/params/common_cam_1.yaml
+++ b/zed_wrapper/params/common_cam_1.yaml
@@ -13,8 +13,8 @@ point_cloud_freq:           10.0                                # Dynamic - freq
 general:
     camera_flip:                false
     zed_id:                     -1
-    serial_number:              10027150
-    resolution:                 3                                   # '0': HD2K, '1': HD1080, '2': HD720, '3': VGA
+    serial_number:              10028648
+    resolution:                 2                                   # '0': HD2K, '1': HD1080, '2': HD720, '3': VGA
     frame_rate:                 60
     gpu_id:                     -1
     base_frame:                 'base_link_1'                 # must be equal to the frame_id used in the URDF file
@@ -26,7 +26,7 @@ general:
     verbose:                    true
     svo_compression:            4                                   # `0`: RAW (no compression), `1`: LOSSLESS (PNG/ZSTD), `2`: LOSSY (JPEG), `3`: AVCHD (H264 SDK v2.7), `4`: HEVC (H265 SDK v2.7)
     coordinate_system:          2                                   # 0 : right_handed_z_up_x_fwd, 1 : left_handed_z_up, 2 : right_handed_z_up, 3 : right_handed_y_up, 4 : left_handed_y_up, 5 : image
-    camera_disable_imu:         true
+    camera_disable_imu:         true        
 
 video:
     rgb_topic_root:             'rgb'                               # default `rgb/image_rect_color`, `rgb/camera_info`, `rgb_raw/image_raw_color`, `rgb_raw/camera_info`
@@ -60,7 +60,7 @@ tracking:
     fixed_covariance:           false                               # Set the covariance for pose and odometry to a diagonal matrix with `fixed_cov_value` on the diagonal
     fixed_cov_value:            1e-6                                # Value used on the diagonal of the fixed covariance matrix (`fixed_covariance -> true`)
     odometry_topic:             'odom'
-    init_odom_with_first_valid_pose: true                           # Enable to initialize the odometry with the first valid pose
+    init_odom_with_first_valid_pose: false                           # Enable to initialize the odometry with the first valid pose
     enable_imu_fusion:          false
     path_pub_rate:              2.0                                 # Path positions punlishing frequency
     path_max_count:             -1                                  # use '-1' for unlimited path size
