--- a/zed_wrapper/package.xml
+++ b/zed_wrapper/package.xml
@@ -17,6 +17,8 @@
   
   <depend>tf2_ros</depend>
   <depend>tf2_geometry_msgs</depend>
+  <depend>tf2</depend>
+  <depend>tf2_sensor_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>roscpp</depend>
   <depend>rosconsole</depend>
