--- a/zed_wrapper/package.xml
+++ b/zed_wrapper/package.xml
@@ -17,7 +17,6 @@
   
   <depend>tf2_ros</depend>
   <depend>tf2_geometry_msgs</depend>
-  <depend>tf2</depend>
   <depend>tf2_sensor_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>roscpp</depend>
@@ -33,6 +32,9 @@
   <build_depend>urdf</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>roslint</build_depend>
+  <build_depend>tf2</build_depend>
+
+  <run_depend>tf2</run_depend>
 
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>message_runtime</exec_depend>
