--- a/zed_wrapper/package.xml
+++ b/zed_wrapper/package.xml
@@ -35,7 +35,7 @@
   <build_depend>roslint</build_depend>
   <build_depend>tf2</build_depend>
 
-  <run_depend>tf2</run_depend>
+  <exec_depend>tf2</exec_depend>
 
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>message_runtime</exec_depend>
