Revert "Merge branch 'transformPriorToPub' of github.com:pincsolutions/zed-ros-wrapper into transformPriorToPub"
This reverts commit 92b3102d98bfc63d5b1de104a951f29318d6e9a7, reversing
changes made to 17e1cd58ecff612a320c122446bbe1f77155f274.

--- a/zed_wrapper/CMakeLists.txt
+++ b/zed_wrapper/CMakeLists.txt
@@ -52,7 +52,7 @@ find_package(catkin COMPONENTS
   message_generation
   diagnostic_updater
   roslint
-  pincair_msgs
+  aisle_keeper
   tf2
   tf2_sensor_msgs
   geometry_msgs
@@ -103,7 +103,7 @@ catkin_package(
     tf2
     tf2_sensor_msgs
     message_runtime
-    pincair_msgs
+    aisle_keeper
     geometry_msgs
 )
 
