--- a/zed_wrapper/params/common_cam_1.yaml
+++ b/zed_wrapper/params/common_cam_1.yaml
@@ -26,7 +26,7 @@ general:
     verbose:                    true
     svo_compression:            4                                   # `0`: RAW (no compression), `1`: LOSSLESS (PNG/ZSTD), `2`: LOSSY (JPEG), `3`: AVCHD (H264 SDK v2.7), `4`: HEVC (H265 SDK v2.7)
     coordinate_system:          0                                   # 0 : right_handed_z_up_x_fwd, 1 : left_handed_z_up, 2 : right_handed_z_up, 3 : right_handed_y_up, 4 : left_handed_y_up, 5 : image
-    camera_disable_imu:         true
+    camera_disable_imu:        false 
     node_name:                  'zed1'
 
 video:
