--- a/zed_wrapper/params/common_cam_1.yaml
+++ b/zed_wrapper/params/common_cam_1.yaml
@@ -61,7 +61,7 @@ tracking:
     fixed_covariance:           false                               # Set the covariance for pose and odometry to a diagonal matrix with `fixed_cov_value` on the diagonal
     fixed_cov_value:            1e-6                                # Value used on the diagonal of the fixed covariance matrix (`fixed_covariance -> true`)
     odometry_topic:             'odom'
-    init_odom_with_first_valid_pose: false                           # Enable to initialize the odometry with the first valid pose
+    init_odom_with_first_valid_pose: true                           # Enable to initialize the odometry with the first valid pose
     enable_imu_fusion:          false
     path_pub_rate:              2.0                                 # Path positions punlishing frequency
     path_max_count:             -1                                  # use '-1' for unlimited path size
